--- a/Prolific_RL.rmd
+++ b/Prolific_RL.rmd
@@ -256,7 +256,7 @@ choice_classification %>%
   count(choice_type) %>%
   ungroup() %>%
   group_by(condition) %>%
-  ggplot(aes(x = condition, y = n, color = choice_type))+
+  ggplot(aes(x = choice_type, y = n, color = condition))+
   geom_boxplot()+
   stat_summary(fun.data=mean_se, fun.args = list(mult=1), geom="pointrange", position = position_dodge(0.75))
 
@@ -267,3 +267,39 @@ summary(mod)
 ```
 
 Based on the the multinomial logistic regression, the interrogative group made more directed exploration choices to resolve uncertainty compared to the imperative group, and the imperative group made more exploitation choices to maximize points gained.
+
+## individual parameter estimates
+
+We can also get the individual parameter esimates for inverse temperature, directed exploration, and perserveration. 
+
+```{r}
+# get the point estimate (mean) for individual subject level parameters
+betas <- apply(bayes_SMEP$beta, 2, mean)
+phis <- apply(bayes_SMEP$phi, 2, mean)
+persevs <- apply(bayes_SMEP$persev, 2, mean)
+```
+
+Learning rate (Kgain) and prediction error (pe) for each trial:
+
+```{r}
+# learning rate on each trial
+Kgains <- apply(bayes_SMEP$Kgain, 2, mean)
+
+# combine with learn data
+for(row in 1:nrow(learn_data)){
+  learn_data$inverse_temperature[row] <- betas[learn_data$ID_num[row]]
+  learn_data$directed_exploration[row] <- phis[learn_data$ID_num[row]]
+  learn_data$perseveration[row] <- persevs[learn_data$ID_num[row]]
+  learn_data$learning_rate[row] <- Kgains[row]
+}
+
+# prediction error on each trial is received - expected reward for the chosen door 
+for(row in 1:nrow(learn_data)){
+  learn_data$prediction_error[row] <- learn_data$reward[row] - bayes_SMEP_Q[row, learn_data$chosen_door_num[row]]
+}
+
+# export 
+write.csv(learn_data, file = "/Users/CandiceWang/Documents/CNAP/Projects/contextRL/learn_data_params.csv")
+```
+
+
