--- a/Prolific_RL.rmd
+++ b/Prolific_RL.rmd
@@ -160,11 +160,14 @@ log_likelihoods <- log_likelihoods %>%
 
 # plot
 levels_order <- c("delta-SM","bayes-SM","delta-SME","bayes-SME","delta-SMEP","bayes-SMEP")
+
 log_likelihoods %>%
   ggplot(aes(x = factor(model_name, level = levels_order), y = elpd_div_trial))+
   geom_bar(stat="identity")+
+  coord_cartesian(ylim = c(-1.1, -0.8))+
   ylab("loo log-likelihood")+
-  xlab("")
+  xlab("")+
+  theme_allie()
 
 
 ```
@@ -191,29 +194,35 @@ beta_mu_diff %>%
   ggplot(aes(x = beta_mu_diff_draws)) +
   # point estimate = mean; high density continuous interval at 95%
   stat_halfeye(point_interval = mean_hdci, width = .95, interval_color = "red")+ 
-  geom_vline(xintercept = 0, color = "grey")+
+  geom_vline(xintercept = 0, color = "black", linetype = "dashed", size = 1)+
   theme(axis.ticks.y = element_blank(),
         axis.text.y = element_blank(),
         axis.title.y = element_blank())+
-  xlab("hyperparameter posterior for group difference in inverse temperature")
+  xlab("hyperparameter posterior for group difference in inverse temperature")+
+  ylab("")+
+  theme_allie()
 
 phi_mu_diff %>%
   ggplot(aes(x = phi_mu_diff_draws)) +
   stat_halfeye(point_interval = mean_hdci, width = .95, interval_color = "red")+
-  geom_vline(xintercept = 0, color = "grey")+
+  geom_vline(xintercept = 0, color = "black", linetype = "dashed", size = 1)+
   theme(axis.ticks.y = element_blank(),
         axis.text.y = element_blank(),
         axis.title.y = element_blank())+
-  xlab("hyperparameter posterior for group difference in directed exploration")
+  xlab("hyperparameter posterior for group difference in directed exploration")+
+  ylab("")+
+  theme_allie()
 
 persev_mu_diff %>%
   ggplot(aes(x = persev_mu_diff_draws)) +
   stat_halfeye(point_interval = mean_hdci, width = .95, interval_color = "red")+
-  geom_vline(xintercept = 0, color = "grey")+
+  geom_vline(xintercept = 0, color = "black", linetype = "dashed", size = 1)+
   theme(axis.ticks.y = element_blank(),
         axis.text.y = element_blank(),
         axis.title.y = element_blank())+
-  xlab("hyperparameter posterior for group difference in perserveration")
+  xlab("hyperparameter posterior for group difference in perserveration")+
+  ylab("")+
+  theme_allie()
 
 ```
 
@@ -258,12 +267,45 @@ choice_classification %>%
   group_by(condition) %>%
   ggplot(aes(x = choice_type, y = n, color = condition))+
   geom_boxplot()+
-  stat_summary(fun.data=mean_se, fun.args = list(mult=1), geom="pointrange", position = position_dodge(0.75))
+  stat_summary(fun.data=mean_se, fun.args = list(mult=1), geom="pointrange", position = position_dodge(0.75))+
+  theme_allie()+
+  scale_color_red_blue("Information Seeking Condition")+
+  xlab("")+
+  ylab("number of choices (out of 100 trials)")
 
 # some stats
 library(mclogit)
 mod <- mblogit(choice_type ~ condition + reward_list, data = choice_classification, random = ~1|subject)
 summary(mod)
+
+# pairwise comparisons
+choice_summary <- choice_classification %>%
+  group_by(subject,condition) %>%
+  count(choice_type)
+
+imp_exploit <- filter(choice_summary, choice_type == "exploitation") %>% filter(condition == "imperative")
+int_exploit <- filter(choice_summary, choice_type == "exploitation") %>% filter(condition == "interrogative")
+# normal distribution?
+#shapiro.test(int_exploit$n)
+# no
+# wilcoxon rank sum test
+wilcox.test(imp_exploit$n, int_exploit$n, alternative = "two.sided")
+
+imp_direxp <- filter(choice_summary, choice_type == "directed_exploration") %>% filter(condition == "imperative")
+int_direxp <- filter(choice_summary, choice_type == "directed_exploration") %>% filter(condition == "interrogative")
+# normal distribution?
+#shapiro.test(int_direxp$n)
+# no
+# wilcoxon rank sum test
+wilcox.test(imp_direxp$n, int_direxp$n, alternative = "two.sided")
+
+imp_randexp <- filter(choice_summary, choice_type == "random_exploration") %>% filter(condition == "imperative")
+int_randexp <- filter(choice_summary, choice_type == "random_exploration") %>% filter(condition == "interrogative")
+# normal distribution?
+#shapiro.test(int_randexp$n)
+# no
+# wilcoxon rank sum test
+wilcox.test(imp_randexp$n, int_randexp$n, alternative = "two.sided")
 ```
 
 Based on the the multinomial logistic regression, the interrogative group made more directed exploration choices to resolve uncertainty compared to the imperative group, and the imperative group made more exploitation choices to maximize points gained.
